# otus_homework1

./: .gitignore  .travis.yml  CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
cmake/: GetGitRevisionDescription.cmake
include/: version.h.in
lib/: CMakeLists.txt
lib/versioner/: CMakeLists.txt  version.h.in  versioner.cpp  versioner.h
lib/versioner/test/: CMakeLists.txt  version_test.cpp
test/: CMakeLists.txt
